--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "http://http://114.32.141.80:3002/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
